--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -1,9 +1,26 @@
-.burgerIngredients{
+.burgerIngredients {
     max-width: 600px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.scrollContainer{
-    height: calc(100vh - 262px);
+.scrollContainer {
+    height: calc(100vh - 324px); /* Учитываем высоту заголовка, табов и отступов */
     overflow-y: auto;
+    padding-right: 8px;
 }
+
+.scrollContainer::-webkit-scrollbar {
+    width: 8px;
+}
+
+.scrollContainer::-webkit-scrollbar-track {
+    background: #2F2F37;
+}
+
+.scrollContainer::-webkit-scrollbar-thumb {
+    background: #8585AD;
+    border-radius: 4px;
+}
+
